Added gitlink to the title page

--- a/main.tex
+++ b/main.tex
@@ -3,9 +3,11 @@
 
 \usepackage{setup} % All packages and settings are defined in a shared setup.sty
 
-\title{Assignement 01 - BDSA 2021}
-\author{Dagrún Eir Ásgeirsdóttir and Albert Rise Nielsen}
+\title{Assignment 01 - BDSA 2021}
+
+\author{g\_37: Dagrún Eir Ásgeirsdóttir and Albert Rise Nielsen\\[1em] https://github.com/goose-alt/bdsa2021-assignment-01}
 \date{16th september 2021}
+
 \begin{document}
    \maketitle
    \frontmatter
